...
  Composer,
  Day,
  MessageText,
} from 'react-native-gifted-chat-flat';
import { View, StyleSheet, Platform } from 'react-native';

import SendButton from './SendButton';
import Ticks from './Ticks';
import TypingIndicator from './TypingIndicator';
import styles from './ChatStyles';

type Message = any;

type MessageWrappersProps = {
  position: 'left' | 'right',
...
